# AISO-workshop

./: .gitignore  README.md  agent.py  dataset.json  evaluate.py  evaluation.py  main.py  pyproject.toml  requirements.txt
benchmark/: questions.json  train.json  train_old.json
data/original/: README_split.md  attachment_mapping.csv  raw_gaia_dataset.jsonl  split_dataset.py
data/rejected/disallowed_file_extension/: disallowed_file_extension.json  disallowed_file_extension_verbose.json
data/rejected/time_too_long/: time_too_long.json  time_too_long_verbose.json
data/rejected/tools_violation/: tools_violation.json  tools_violation_verbose.json
data/test_set/: test.json
data/validation_sets/: train_combination.json  train_document_reading.json  train_web_search.json  validation_verbose.json
my_agent/: .env  .local_env  agent.py
my_agent/tools/: __init__.py  calculator.py  fetch_webpage.py  read_pdf.py  web_search.py
scripts/: agent.py  rename_attachments.py
validation_sets/: validation.json
